# NATSpector

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
src/: CMakeLists.txt  DataNode.cpp  DataNode.h  main.cpp
src/nats/: NatsConnection.cpp  NatsConnection.h
